--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .App {
   text-align: center;
 }
+
+.navbar-nav > li:first-child{
+  font-size: 11.4px;
+  font-style: normal;
+}
+
+.navbar-grey{
+  background-color: #B5B4B4;
+}
